# acado_example_ws

./: CMakeLists.txt  README.md
src/: generate_primitives.cpp
